@@ -152,6 +152,7 @@ public class DamageRow {
 
 		if ((source.skill != null) && (source.skill.getSkillType() == SkillType.Primary)) {
 			this.multipliers.add(DamageMultiplier.Simplicity);
+			this.multipliers.add(DamageMultiplier.HW);
 		}
 		
 		if ((source.skill == ActiveSkill.RoV) || (source.skill == ActiveSkill.CR)) {
